# pymedic

./: .gitignore  README.md
assignments/: text_menu.py  text_menu_v2.py
assignments/medical_center/: app.py  json.json  mc_data.py  mc_delete.py  mc_delete_patient.py  mc_generate_id.py  mc_new_patient.py  mc_patient_list_menu.py  mc_search.py  mc_table.py  mc_view.py  medical_center.py  pyproject.toml
assignments/medical_center/templates/: index.html
docs/: installation.md
lessons/01-introduction/: code.md  index.md  zadanie- glikemia.py  zadanie-triage.py
lessons/02-filesystem/: index.md
lessons/03-variables/: index.md
lessons/03-variables-primitives-operations/: ascii_inspector.py  budget.py  index.md  parser.py  solutions.md  types.py
lessons/04-strings-lists-iterations/: 01-strings.md  02-lists.md  03-comparing.md  04-looping-for.md  05-looping-while.md  caesar.md  count_duplicated_list_elements.py  index.md  merge_and_sort.py  palindrome.py  remove_duplicated.py  remove_duplicates.py  reverse_words.py  rotate_list.py  vowels_consonants.py
lessons/04-strings-lists-iterations/solutions/: 01-strings-code.md  02-lists-code.md  03-comparing-code.md  04-looping-for-code.md  (+8 more)
lessons/05-conditionals-logic/: index.md
lessons/05-tuples-dictionaries/: 02-dictionaries.md  03-conditionals.md  index.md
lessons/05-tuples-dictionaries-conditionals/: 01-tuples.md  library.md
lessons/06-functions/: code.py  index.md  medical_center.py  patients.md
lessons/07-files/: index.md
lessons/08-classes/: classes.py  code.py  index.md
lessons/09-http/: index.md
(+10 files in other folders)
